--- a/webapp/app/styles/_search-box.scss
+++ b/webapp/app/styles/_search-box.scss
@@ -56,8 +56,10 @@ $bp-button: new-breakpoint(min-width 934px);
 
   input {
     -webkit-appearance: none;
-    border: 1px solid rgb(204, 204, 204);
+    border-color: $border-gray;
     border-radius: 3px;
+    border-style: solid;
+    border: 1px;
     font-size: 1em;
     height: 30px;
     margin: 0;
